--- a/FlickrSearch/Main.storyboard
+++ b/FlickrSearch/Main.storyboard
@@ -19,13 +19,13 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="WPt-18-7FT">
                             <size key="itemSize" width="200" height="200"/>
-                            <size key="headerReferenceSize" width="50" height="90"/>
+                            <size key="headerReferenceSize" width="50" height="60"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
                             <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="FlickrCell" id="ZKU-Fs-dzy" customClass="FlickrPhotoCell" customModule="FlickrSearch" customModuleProvider="target">
-                                <rect key="frame" x="0.0" y="90" width="200" height="200"/>
+                                <rect key="frame" x="0.0" y="60" width="200" height="200"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                     <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
@@ -54,20 +54,30 @@
                             </collectionViewCell>
                         </cells>
                         <collectionReusableView key="sectionHeaderView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" reuseIdentifier="FlickrPhotoHeaderView" id="6ZW-ul-uH6" userLabel="Flickr Photo Header View" customClass="FlickrPhotoHeaderView" customModule="FlickrSearch" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="0.0" width="834" height="90"/>
+                            <rect key="frame" x="0.0" y="0.0" width="834" height="60"/>
                             <autoresizingMask key="autoresizingMask"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mnm-wT-emT">
-                                    <rect key="frame" x="379" y="26" width="76" height="39"/>
+                                    <rect key="frame" x="16" y="8" width="76" height="38.5"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="32"/>
                                     <nil key="textColor"/>
                                     <nil key="highlightedColor"/>
                                 </label>
+                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5xj-0w-vbh" userLabel="Border">
+                                    <rect key="frame" x="16" y="46.5" width="802" height="8"/>
+                                    <color key="backgroundColor" red="0.0" green="0.41176470588235292" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="8" id="ddg-Nc-9ji"/>
+                                    </constraints>
+                                </view>
                             </subviews>
-                            <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
-                                <constraint firstItem="Mnm-wT-emT" firstAttribute="centerX" secondItem="6ZW-ul-uH6" secondAttribute="centerX" id="Am6-KN-eux"/>
-                                <constraint firstItem="Mnm-wT-emT" firstAttribute="centerY" secondItem="6ZW-ul-uH6" secondAttribute="centerY" id="hPU-8D-Biq"/>
+                                <constraint firstItem="Mnm-wT-emT" firstAttribute="leading" secondItem="6ZW-ul-uH6" secondAttribute="leading" constant="16" id="CDq-qy-4Iz"/>
+                                <constraint firstItem="5xj-0w-vbh" firstAttribute="top" secondItem="Mnm-wT-emT" secondAttribute="bottom" id="Kog-dv-U9i"/>
+                                <constraint firstItem="5xj-0w-vbh" firstAttribute="leading" secondItem="6ZW-ul-uH6" secondAttribute="leading" constant="16" id="Lyg-rU-20S"/>
+                                <constraint firstItem="Mnm-wT-emT" firstAttribute="top" secondItem="6ZW-ul-uH6" secondAttribute="top" constant="8" id="fHQ-d1-QS8"/>
+                                <constraint firstAttribute="trailing" secondItem="5xj-0w-vbh" secondAttribute="trailing" constant="16" id="gLU-g1-yrO"/>
                             </constraints>
                             <connections>
                                 <outlet property="label" destination="Mnm-wT-emT" id="nyB-ow-xtQ"/>
